first version for the coauthors

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -69,9 +69,9 @@ larger than $87\pm 14$\hkpc corresponding to our observational
 benchmark; for clusters this fraction is in the range of $4\%$ to
 $10\%$, consistent with previous studies of dark matter to baryon
 separations. The extension of the theoretical predictions and
-observational results towards low mass Bullet-like configurations,
-i.e. larger abundance of systems,  opens up the possibility for a new
-statistical test of  $\Lambda$CDM.  
+observational results towards low mass bi-modal dark matter
+configurations opens up the possibility for a new statistical test of
+$\Lambda$CDM.   
 \end{abstract}
 
 \begin{keywords}
@@ -126,7 +126,7 @@ simulation with such a resolution that allows us to identify
 multi-modal dark matter distributions in hosts with circular velocities
 larger than $300$\kms.  
 
-This Letter is organized as the follows. In Section
+This Letter is organized as follows. In Section
 \ref{sec:simulation} we present the simulation and the halo catalogs
 used in this work. We continue in Section \ref{sec:setup} with the
 geometry of the problem at hand and the measurements setup. Next in
@@ -505,10 +505,6 @@ of clusters, consistent with the results reported by
   uncertainty of the displacement measured for \bullg.} 
 \label{fig:baryonic_displacements}
 \end{figure}
-
-
-\section{Observational Implications}
-\label{sec:observations}
 
 
 \section{Conclusions}
