--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,63 @@
+@ARTICLE{Poole2006,
+   author = {{Poole}, G.~B. and {Fardal}, M.~A. and {Babul}, A. and {McCarthy}, I.~G. and 
+	{Quinn}, T. and {Wadsley}, J.},
+    title = "{The impact of mergers on relaxed X-ray clusters - I. Dynamical evolution and emergent transient structures}",
+  journal = {\mnras},
+   eprint = {astro-ph/0608560},
+ keywords = {galaxies: clusters: general, intergalactic medium, cosmology: theory, X-rays: general},
+     year = 2006,
+    month = dec,
+   volume = 373,
+    pages = {881-905},
+      doi = {10.1111/j.1365-2966.2006.10916.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2006MNRAS.373..881P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bryan1998,
+   author = {{Bryan}, G.~L. and {Norman}, M.~L.},
+    title = "{Statistical Properties of X-Ray Clusters: Analytic and Numerical Comparisons}",
+  journal = {\apj},
+   eprint = {astro-ph/9710107},
+ keywords = {GALAXIES: CLUSTERS: GENERAL, METHODS: NUMERICAL, X-RAYS: GALAXIES},
+     year = 1998,
+    month = mar,
+   volume = 495,
+    pages = {80-99},
+      doi = {10.1086/305262},
+   adsurl = {http://adsabs.harvard.edu/abs/1998ApJ...495...80B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{BDMb,
+   author = {{Klypin}, A. and {Gottl{\"o}ber}, S. and {Kravtsov}, A.~V. and 
+	{Khokhlov}, A.~M.},
+    title = "{Galaxies in N-Body Simulations: Overcoming the Overmerging Problem}",
+  journal = {\apj},
+   eprint = {astro-ph/9708191},
+ keywords = {COSMOLOGY: THEORY, GALAXIES: FORMATION, GALAXIES: HALOS, COSMOLOGY: LARGE-SCALE STRUCTURE OF UNIVERSE, METHODS: NUMERICAL},
+     year = 1999,
+    month = may,
+   volume = 516,
+    pages = {530-551},
+      doi = {10.1086/307122},
+   adsurl = {http://adsabs.harvard.edu/abs/1999ApJ...516..530K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{BDM,
+   author = {{Klypin}, A. and {Holtzman}, J.},
+    title = "{Particle-Mesh code for cosmological simulations}",
+  journal = {ArXiv Astrophysics e-prints},
+   eprint = {astro-ph/9712217},
+     year = 1997,
+    month = dec,
+   adsurl = {http://adsabs.harvard.edu/abs/1997astro.ph.12217K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Dahle2013,
    author = {{Dahle}, H. and {Sarazin}, C.~L. and {Lopez}, L.~A. and {Kouveliotou}, C. and 
 	{Patel}, S.~K. and {Rol}, E. and {van der Horst}, A.~J. and 
