--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -569,6 +569,12 @@ simulation was performed within the Bolshoi project of the University
 of California High-Performance  AstroComputing Center (UC-HIPACC) and
 was run at the NASA Ames Research Center. 
 
+J.E. Forero-Romero acknowledges support from Vicerrector\'ia de
+Investigaciones through a FAPA starting grant.
+
+T. Verdugo acknowledges support from CONACYT through grant 165365 and
+203489 through the program Estancias posdoctorales y sab\'aticas al
+extranjero para la consolidaci\'on de grupos de investigaci\'on.  
 
 \bibliographystyle{apj}
 \bibliography{references} 
