--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,79 @@
+@ARTICLE{Foex2013,
+   author = {{Fo{\"e}x}, G. and {Motta}, V. and {Limousin}, M. and {Verdugo}, T. and 
+	{More}, A. and {Cabanac}, R. and {Gavazzi}, R. and {Mu{\~n}oz}, R.~P.
+	},
+    title = "{SARCS strong-lensing galaxy groups. I. Optical, weak lensing, and scaling laws}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1308.4674},
+ primaryClass = "astro-ph.CO",
+ keywords = {gravitational lensing: weak, cosmology: observations, dark matter, galaxies: groups: general},
+     year = 2013,
+    month = nov,
+   volume = 559,
+      eid = {A105},
+    pages = {A105},
+      doi = {10.1051/0004-6361/201321112},
+   adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...559A.105F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Kravtsov1997,
+   author = {{Kravtsov}, A.~V. and {Klypin}, A.~A. and {Khokhlov}, A.~M.},
+    title = "{Adaptive Refinement Tree: A New High-Resolution N-Body Code for Cosmological Simulations}",
+  journal = {\apjs},
+   eprint = {astro-ph/9701195},
+ keywords = {METHODS: NUMERICAL, COSMOLOGY: THEORY, COSMOLOGY: DARK MATTER},
+     year = 1997,
+    month = jul,
+   volume = 111,
+    pages = {73},
+      doi = {10.1086/313015},
+   adsurl = {http://adsabs.harvard.edu/abs/1997ApJS..111...73K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{More2012,
+   author = {{More}, A. and {Cabanac}, R. and {More}, S. and {Alard}, C. and 
+	{Limousin}, M. and {Kneib}, J.-P. and {Gavazzi}, R. and {Motta}, V.
+	},
+    title = "{The CFHTLS-Strong Lensing Legacy Survey (SL2S): Investigating the Group-scale Lenses with the SARCS Sample}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1109.1821},
+ primaryClass = "astro-ph.CO",
+ keywords = {dark matter, gravitational lensing: strong, methods: data analysis, surveys},
+     year = 2012,
+    month = apr,
+   volume = 749,
+      eid = {38},
+    pages = {38},
+      doi = {10.1088/0004-637X/749/1/38},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...749...38M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Cabanac2007,
+   author = {{Cabanac}, R.~A. and {Alard}, C. and {Dantel-Fort}, M. and {Fort}, B. and 
+	{Gavazzi}, R. and {Gomez}, P. and {Kneib}, J.~P. and {Le F{\`e}vre}, O. and 
+	{Mellier}, Y. and {Pello}, R. and {Soucail}, G. and {Sygnet}, J.~F. and 
+	{Valls-Gabaud}, D.},
+    title = "{The CFHTLS strong lensing legacy survey. I. Survey overview and T0002 release sample}",
+  journal = {\aap},
+   eprint = {astro-ph/0610362},
+ keywords = {gravitational lensing, surveys, cosmology: dark matter, galaxies: fundamental parameters, galaxies: clusters: general, galaxies: halos},
+     year = 2007,
+    month = jan,
+   volume = 461,
+    pages = {813-821},
+      doi = {10.1051/0004-6361:20065810},
+   adsurl = {http://adsabs.harvard.edu/abs/2007A%26A...461..813C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Poole2006,
    author = {{Poole}, G.~B. and {Fardal}, M.~A. and {Babul}, A. and {McCarthy}, I.~G. and 
 	{Quinn}, T. and {Wadsley}, J.},
